@@ -10,12 +10,10 @@ class SessionTest(object):
             shutil.rmtree(config.DATABASE)
         os.makedirs(config.DATABASE + '/files')
         self.db = self.module.Database(config, 'admin')
-        self.sessions = self.sessions_module.Sessions(self.db)
-        self.otks = self.sessions_module.OneTimeKeys(self.db)
+        self.sessions = self.db.getSessionManager()
+        self.otks = self.db.getOTKManager()
 
     def tearDown(self):
-        del self.otks
-        del self.sessions
         if hasattr(self, 'db'):
             self.db.close()
         if os.path.exists(config.DATABASE):
@@ -49,10 +47,4 @@ class SessionTest(object):
             'hello, world!')
         self.sessions.set('random_key', text='nope')
         self.assertEqual(self.sessions.get('random_key', 'text'), 'nope')
-
-class DBMTest(SessionTest):
-    import roundup.backends.sessions_dbm as sessions_module
-
-class RDBMSTest(SessionTest):
-    import roundup.backends.sessions_rdbms as sessions_module
 
